# attack2defend

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  daily-data-refresh.yml
app/navigator-ui/: README.md  index.html  package-lock.json  package.json
contracts/: A2D_CAPABILITY_CONTRACT.md  BUNDLE_CONTRACT.md  MAPPING_CONTRACT.md  UIX_PARITY_CONTRACT.md  route-analysis.schema.json
data/: coverage.json  edges.json  indexes.json  knowledge-bundle.json  knowledge-bundle.last-good.json  metadata.json  nodes.json  routes.json
data/intelligence/: curator_config.yaml
data/mappings/: backbone_core.json
data/samples/: cve-2024-37079-vcenter.route.json  cwe-79-xss.route.json  d3-mfa-identity.route.json  t1567-exfiltration-web-service.route.json
data/snapshots/: knowledge-bundle-20260430T130022Z.json  knowledge-bundle-20260430T130023Z.json
docs/: ARCHITECTURE.md  CTEM_OPERATING_MODEL.md  LOCALHOST_DEPLOYMENT.md  PREPROD_DEPLOYMENT_DEBIAN.md  UX_MODEL.md
examples/mcp_security/: resolve_defense_route.json
schemas/: a2d_capability_response.schema.json
scripts/: bootstrap_local_full.sh  bootstrap_preprod.sh  preprod_check.sh  sync_cve2capec_raw.sh
scripts/canonical_exports/: __init__.py  build_canonical.py  validate_canonical.py
scripts/cve2capec/: __init__.py  _pipeline.py  capec2technique.py  cve2cwe.py  (+7 more)
tests/: test_canonical_exports.py  test_capability_contract.py  test_capability_sanitization.py  test_knowledge_builder.py  test_mapping_backbone.py  test_public_collectors.py  test_resolver.py  test_two_map_resolver.py
(+82 files in other folders)
