[project]
name = "attack2defend"
version = "0.1.0"
description = "Operational navigator for CVE/CWE/CAPEC/ATT&CK/D3FEND routes, CTI/TH actions and defensive coverage."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "jsonschema>=4.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
